Addressing review comments. Refactor to use java 11's HttpClient and mocking that in unit tests. Adding sqrl tests.